src/App.css
/* ... */
@media all and (max-width: 700px) {
  html,
  body {
    overflow: hidden;
  }
  .nav-bar {
    height: 80px;
  }
  .space {
    background-image: url(./assets/home/background-home-mobile.jpg);
  }
  .nav-menu {
    display: none;
  }
  .hamburger {
    display: flex;
    height: 25px;
    width: 26px;
    margin-right: 15px;
    cursor: pointer;
    z-index: 1000;
  }
  .mobile-nav-menu {
    display: block;
    position: absolute;
    right: -700px;
    top: 1px;
    height: 100%;

    list-style: none;
    background-color: rgba(255, 255, 255, 0.1);
    backdrop-filter: blur(16px);
    width: 60%;
    z-index: 10;
    padding: 1rem;
    padding-top: 100px;
    transition: 0.5s ease;
  }
  .mobile-nav-list {
    list-style: none;
    padding: 1rem;
  }
  .mobile-nav-list > li {
    margin-bottom: 40px;
    display: flex;
    gap: 0.5rem;
    cursor: pointer;
  }
  .explore {
    margin: 0;
  }
  .home {
    height: 100%;
  }

  .space-question-div {
    font-size: 19px;
    display: flex;
    flex-direction: column;
    align-items: center;
  }
  .space-word {
    margin-top: 10px;
    margin-bottom: 15px;
    font-size: 70px;
  }
  .space-paragraph {
    font-size: 20px;
    max-width: 80%;
    text-align: center;
  }
  .explore-button-div {
    height: 170px;
    width: 170px;
  }
  .pick-destination-div {
    font-size: 15px;
    text-align: center;
    width: 100%;
    margin-bottom: 40px;
    position: absolute;
    top: 100px;
  }
  .planet-capsule {
    flex-direction: column;
    padding-left: 1rem;
    padding-right: 1rem;
  }
  .planet-img-div {
    height: 230px;
    background-size: contain;
    background-repeat: no-repeat;
    background-position: center;
  }
  .planet-selection-div {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
  }
  .planet-name {
    font-size: 60px;
    text-align: center;
    margin-top: -10px;
  }
  .planet-paragraph {
    margin-bottom: 20px;
    margin-top: 15px;
    font-size: 15px;
    max-width: 80%;
  }
  .planet-hr {
    width: 80%;
  }
  .planet-information {
    margin-bottom: 10px;
  }
  .distance-span {
    font-size: 14px;
  }
  .planet {
    font-size: 16px;
  }
  .arrival-data-span {
    font-size: 20px;
    display: inline;
  }
  .arrival-span {
    font-size: 14px;
    white-space: nowrap;
  }
  .distance-span {
    font-size: 14px;
    width: 79px;
  }
  .crew-page {
    padding: 0;
    display: flex;
    flex-direction: column-reverse;
    justify-content: center;
  }
  .main-content {
    display: flex;
    flex-direction: column-reverse;
  }
  .crew-information-panel {
    width: 100%;
    max-width: 100%;
    height: fit-content;
    display: flex;
    justify-content: center;
    align-items: center;
    flex-direction: column;
    padding: 1rem;
  }
  .meet-your-crew {
    position: absolute;
    width: 100%;
    text-align: center;
    top: 90px;
    font-size: 18px;
    margin: 0;
  }

  .img-hr {
    display: block;
    margin-right: 10%;
    margin-left: 10%;
    border: 1px solid rgba(255, 255, 255, 0.2);
  }

  .crew-image-div {
    background-size: contain;
    background-repeat: no-repeat;
    background-position: center;
    height: 250px;
    width: 100%;
    position: static;
    /* margin-top: -50px; */
  }
  .commander-info {
    margin: 0;
    width: 100%;
  }
  .crew-title {
    font-size: 20px;
    text-align: center;
  }
  .crew-name {
    text-align: center;
    font-size: 27px;
    margin-bottom: 15px;
    margin-top: 10px;
  }
  .crew-paragraph {
    text-align: center;
    font-size: 18px;
  }
  .crew-selection-div {
    position: static;
    align-items: center;
    display: flex;
    justify-content: center;
    margin-top: 8px;
    width: 100%;
    margin: 0;
    padding: 0;
    padding-top: 5px;
    padding-bottom: 15px;
    gap: 2rem;
  }
  .crew-selection-panel {
    display: flex;
    flex-direction: column-reverse;
    margin-bottom: 15px;
    width: 100%;
  }
  .selectionPoint {
    width: 12px;
    height: 12px;
    margin: 0;
  }
  .tech-number-div {
    font-size: 15px;
    top: 85px;
    text-align: center;
    width: 100%;
    margin: 0;
    padding: 0;
  }
  .technology-page {
    display: flex;
    flex-direction: column-reverse;
    align-items: center;
    justify-content: center;
    padding: 0;
    margin-top: 25px;
  }
  .tech-image-div {
    background-size: contain;
    background-repeat: no-repeat;
    background-position: center;
    height: 250px;
    margin: 0;
    padding: 0;
    position: static;
    margin-top: -80px;
  }
  .tech-desc-panel {
    display: flex;
    flex-direction: column;
    margin: 0;
    max-width: 100%;
    width: 100%;
    gap: 0;
  }
  .tech-description-panel {
    max-width: 100%;
    display: flex;
    align-items: center;
  }
  .tech-info-selection {
    display: flex;
    gap: 1rem;
    width: 100%;
    margin: 0;
    padding: 0;
    align-items: center;
    justify-content: center;
  }
  .tech-info-button {
    width: 40px;
    height: 40px;
  }
  .tech-name {
    font-size: 35px;
    margin: 0;
  }
  .tech-description {
    max-width: 80%;
    font-size: 13px;
    text-align: center;
  }
}

